<resources>
    <string name="app_name">LEADGames</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="game_title">Digitizing Language Development Games</string>
    <string name="authors">Alice Zhou, Neha Goswami, Vanessa Makuvaro</string>
    <string name="title_activity_fish">Flanker Game</string>
    <string name="fish_desc">Fish Descriptor</string>
    <string name="fish_prompt">Which way is the middle fish going?</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="studentID">Student ID</string>
    <string name="participant_info">Participant Information</string>
    <string name="submit">SUBMIT</string>

    <string name="flanker">Flanker</string>
    <string name="put_task">Put Task</string>
    <string name="ambiguity_matching">Ambiguity Matching</string>
    <string name="title_activity_pick_up">PickUp Game</string>

    <string name="submit_desc">Submission button</string>
    <string name="submit_button">Done!</string>
    <string name="trial_done">Well Done!</string>
    <string name="game_done">Game Complete!</string>
    <string name="animal">animal image view</string>
    <string name="platform">platform image view</string>

    <string name="title_amb_game">Ambiguity Detection Game</string>
    <string name="scene">scene image view </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_game_menu">GameMenu</string>
</resources>
