<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@drawable/bckg2">

    <TextView
        android:id="@+id/title"
        android:textSize="70sp"
        android:textColor="@color/off_white"
        android:text="@string/participant_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/first_name_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/TextHintAppearance"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dob_layout"
        app:layout_constraintEnd_toStartOf="@+id/last_name_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/first_name"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/TextHintAppearance"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/first_name_layout"
        app:layout_constraintTop_toTopOf="@+id/first_name_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/last_name"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/TextHintAppearance"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/dob_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout"
        app:layout_constraintVertical_bias="0.498">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/studentID" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dob_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/TextHintAppearance"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/gender_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/id_layout"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout"
        app:layout_constraintVertical_bias="0.503">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dob"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dob"
            android:inputType="datetime" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/gender_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintTextAppearance="@style/TextHintAppearance"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/dob_layout"
        app:layout_constraintTop_toBottomOf="@+id/first_name_layout"
        app:layout_constraintVertical_bias="0.503">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/gender"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob_layout" />

</android.support.constraint.ConstraintLayout>